devops/prod/mug-transfer/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-mug-transfer
  namespace: mdp
  labels:
    mSvc: webapp-mug-transfer
spec:
  selector:
    matchLabels:
      mSvc: webapp-mug-transfer
  template:
    metadata:
      labels:
        mSvc: webapp-mug-transfer
    spec:
      containers:
        - name: webapp-mug-transfer-container
          image: monsterdigital.azurecr.io/mdp-webapp-mug-transfer:prod
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
