devops/prod/mug-transfer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-mug-transfer
  namespace: mdp
  labels:
    mSvc: webapp-mug-transfer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    mSvc: webapp-mug-transfer
